# simple-ar-models

./: pyproject.toml
simple_ar_models/: xor.py
